--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         <div id="root"></div>
-        <script type="text/javascript" src="dest/app.bundle.js"></script>
+        <script type="text/javascript" src="/app.bundle.js"></script>
     </body>
 </html>
